# account-abstraction-rs

./: Cargo.toml  README.md
alloy/: Cargo.toml
alloy/src/: lib.rs
alloy/src/abi/: SimpleAccount.json  SimpleAccountFactory.json
alloy/src/contracts/: mod.rs
alloy/src/entry_point/: entry_point.rs  mod.rs
alloy/src/provider/: erc4337_api.rs  mod.rs  smart_account_provider.rs
alloy/src/smart_account/: entry_point.rs  mod.rs  signer.rs  simple_account.rs  smart_account.rs  utils.rs
alloy/src/types/: mod.rs  request.rs  response.rs
alloy/src/utils/: utils.rs
src/: lib.rs
src/abi/alchemy/: SemiModularAccount.json
src/abi/safe/: MultiSend.json  Safe4337Module.json  (+1 more)
src/account/: base_account.rs  middleware.rs  mod.rs  simple_account.rs  utils.rs
src/contracts/: entry_point.rs  mod.rs  safe_4337_module.rs  safe_add_module_lib.rs  safe_l2.rs  safe_proxy_factory.rs  safe_signer_launch_pad.rs  simple_account.rs  simple_account_factory.rs  verifying_paymaster.rs  zerodev_kernel_account.rs  zerodev_kernel_factory.rs  zerodev_session_key_plugin.rs
src/entry_point/: entry_point.rs
src/paymaster/: mod.rs  paymaster.rs
src/provider/: erc4337_api.rs  mod.rs  smart_account_provider.rs
src/signer/: signer.rs
src/smart_account/: alchemy_account_7702.rs  base_account.rs  entry_point.rs  middleware.rs  mod.rs  provider.rs  safe_account.rs  safe_standard_account.rs  signer.rs  simple_account.rs  smart_account.rs  utils.rs  zero_dev_account.rs  zerodev_kernel_account.rs
src/types/: mod.rs  request.rs  response.rs  user_operation.rs
src/utils/: utils.rs
(+2 files in other folders)
