[package]
name = "aa-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1", features = ["full"] }
tokio = { version = "1.37", features = ["full", "test-util"] }
async-trait = "0.1"
thiserror = "2.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.1"